# Facial-Expression-Recognition-using-Keras

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py  app.py
scripts/: download_fer2013.sh  predict_image.py
src/: __init__.py  config.py  evaluate.py  train.py
src/inference/: __init__.py  face_detector.py  predictor.py
src/models/: __init__.py  emotion_classifier.py
static/: style.css
templates/: index.html
tests/: test_data_pipeline.py
